librocksdb_sys/bindings/aarch64-unknown-linux-gnu-bindings.rs

extern "C" {
    pub fn crocksdb_compactoptions_set_exclusive_manual_compaction(
        arg1: *mut crocksdb_compactoptions_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_compactoptions_set_change_level(
        arg1: *mut crocksdb_compactoptions_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_compactoptions_set_target_level(
        arg1: *mut crocksdb_compactoptions_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_compactoptions_set_target_path_id(
        arg1: *mut crocksdb_compactoptions_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_compactoptions_set_max_subcompactions(
        arg1: *mut crocksdb_compactoptions_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_compactoptions_set_bottommost_level_compaction(
        arg1: *mut crocksdb_compactoptions_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_flushoptions_create() -> *mut crocksdb_flushoptions_t;
}
extern "C" {
    pub fn crocksdb_flushoptions_destroy(arg1: *mut crocksdb_flushoptions_t);
}
extern "C" {
    pub fn crocksdb_flushoptions_set_wait(arg1: *mut crocksdb_flushoptions_t, arg2: libc::c_uchar);
}
extern "C" {
    pub fn crocksdb_flushoptions_set_allow_write_stall(
        arg1: *mut crocksdb_flushoptions_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_jemalloc_nodump_allocator_create(
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_memory_allocator_t;
}
extern "C" {
    pub fn crocksdb_memory_allocator_destroy(arg1: *mut crocksdb_memory_allocator_t);
}
extern "C" {
    pub fn crocksdb_lru_cache_options_create() -> *mut crocksdb_lru_cache_options_t;
}
extern "C" {
    pub fn crocksdb_lru_cache_options_destroy(arg1: *mut crocksdb_lru_cache_options_t);
}
extern "C" {
    pub fn crocksdb_lru_cache_options_set_capacity(
        arg1: *mut crocksdb_lru_cache_options_t,
        arg2: usize,
    );
}
extern "C" {
    pub fn crocksdb_lru_cache_options_set_num_shard_bits(
        arg1: *mut crocksdb_lru_cache_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_lru_cache_options_set_strict_capacity_limit(
        arg1: *mut crocksdb_lru_cache_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_lru_cache_options_set_high_pri_pool_ratio(
        arg1: *mut crocksdb_lru_cache_options_t,
        arg2: f64,
    );
}
extern "C" {
    pub fn crocksdb_lru_cache_options_set_memory_allocator(
        arg1: *mut crocksdb_lru_cache_options_t,
        arg2: *mut crocksdb_memory_allocator_t,
    );
}
extern "C" {
    pub fn crocksdb_cache_create_lru(
        arg1: *mut crocksdb_lru_cache_options_t,
    ) -> *mut crocksdb_cache_t;
}
extern "C" {
    pub fn crocksdb_cache_destroy(cache: *mut crocksdb_cache_t);
}
extern "C" {
    pub fn crocksdb_cache_set_capacity(cache: *mut crocksdb_cache_t, capacity: usize);
}
extern "C" {
    pub fn crocksdb_default_env_create() -> *mut crocksdb_env_t;
}
extern "C" {
    pub fn crocksdb_mem_env_create() -> *mut crocksdb_env_t;
}
extern "C" {
    pub fn crocksdb_ctr_encrypted_env_create(
        base_env: *mut crocksdb_env_t,
        ciphertext: *const libc::c_char,
        ciphertext_len: usize,
    ) -> *mut crocksdb_env_t;
}
extern "C" {
    pub fn crocksdb_env_set_background_threads(env: *mut crocksdb_env_t, n: libc::c_int);
}
extern "C" {
    pub fn crocksdb_env_set_high_priority_background_threads(
        env: *mut crocksdb_env_t,
        n: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_env_join_all_threads(env: *mut crocksdb_env_t);
}
extern "C" {
    pub fn crocksdb_env_file_exists(
        env: *mut crocksdb_env_t,
        path: *const libc::c_char,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_env_delete_file(
        env: *mut crocksdb_env_t,
        path: *const libc::c_char,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_env_destroy(arg1: *mut crocksdb_env_t);
}
extern "C" {
    pub fn crocksdb_envoptions_create() -> *mut crocksdb_envoptions_t;
}
extern "C" {
    pub fn crocksdb_envoptions_destroy(opt: *mut crocksdb_envoptions_t);
}
extern "C" {
    pub fn crocksdb_sequential_file_create(
        env: *mut crocksdb_env_t,
        path: *const libc::c_char,
        opts: *const crocksdb_envoptions_t,
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_sequential_file_t;
}
extern "C" {
    pub fn crocksdb_sequential_file_read(
        arg1: *mut crocksdb_sequential_file_t,
        n: usize,
        buf: *mut libc::c_char,
        errptr: *mut *mut libc::c_char,
    ) -> usize;
}
extern "C" {
    pub fn crocksdb_sequential_file_skip(
        arg1: *mut crocksdb_sequential_file_t,
        n: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_sequential_file_destroy(arg1: *mut crocksdb_sequential_file_t);
}
extern "C" {
    pub fn crocksdb_sstfilereader_create(
        io_options: *const crocksdb_options_t,
    ) -> *mut crocksdb_sstfilereader_t;
}
extern "C" {
    pub fn crocksdb_sstfilereader_open(
        reader: *mut crocksdb_sstfilereader_t,
        name: *const libc::c_char,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_sstfilereader_new_iterator(
        reader: *mut crocksdb_sstfilereader_t,
        options: *const crocksdb_readoptions_t,
    ) -> *mut crocksdb_iterator_t;
}
extern "C" {
    pub fn crocksdb_sstfilereader_read_table_properties(
        reader: *const crocksdb_sstfilereader_t,
        ctx: *mut libc::c_void,
        cb: ::std::option::Option<
            unsafe extern "C" fn(arg1: *mut libc::c_void, arg2: *const crocksdb_table_properties_t),
        >,
    );
}
extern "C" {
    pub fn crocksdb_sstfilereader_verify_checksum(
        reader: *mut crocksdb_sstfilereader_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_sstfilereader_destroy(reader: *mut crocksdb_sstfilereader_t);
}
extern "C" {
    pub fn crocksdb_sstfilewriter_create(
        env: *const crocksdb_envoptions_t,
        io_options: *const crocksdb_options_t,
    ) -> *mut crocksdb_sstfilewriter_t;
}
extern "C" {
    pub fn crocksdb_sstfilewriter_create_cf(
        env: *const crocksdb_envoptions_t,
        io_options: *const crocksdb_options_t,
        column_family: *mut crocksdb_column_family_handle_t,
    ) -> *mut crocksdb_sstfilewriter_t;
}
extern "C" {
    pub fn crocksdb_sstfilewriter_open(
        writer: *mut crocksdb_sstfilewriter_t,
        name: *const libc::c_char,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_sstfilewriter_put(
        writer: *mut crocksdb_sstfilewriter_t,
        key: *const libc::c_char,
        keylen: usize,
        val: *const libc::c_char,
        vallen: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_sstfilewriter_merge(
        writer: *mut crocksdb_sstfilewriter_t,
        key: *const libc::c_char,
        keylen: usize,
        val: *const libc::c_char,
        vallen: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_sstfilewriter_delete(
        writer: *mut crocksdb_sstfilewriter_t,
        key: *const libc::c_char,
        keylen: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_sstfilewriter_delete_range(
        writer: *mut crocksdb_sstfilewriter_t,
        begin_key: *const libc::c_char,
        begin_keylen: usize,
        end_key: *const libc::c_char,
        end_keylen: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_sstfilewriter_finish(
        writer: *mut crocksdb_sstfilewriter_t,
        info: *mut crocksdb_externalsstfileinfo_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_sstfilewriter_file_size(writer: *mut crocksdb_sstfilewriter_t) -> u64;
}
extern "C" {
    pub fn crocksdb_sstfilewriter_destroy(writer: *mut crocksdb_sstfilewriter_t);
}
extern "C" {
    pub fn crocksdb_externalsstfileinfo_create() -> *mut crocksdb_externalsstfileinfo_t;
}
extern "C" {
    pub fn crocksdb_externalsstfileinfo_destroy(arg1: *mut crocksdb_externalsstfileinfo_t);
}
extern "C" {
    pub fn crocksdb_externalsstfileinfo_file_path(
        arg1: *mut crocksdb_externalsstfileinfo_t,
        arg2: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_externalsstfileinfo_smallest_key(
        arg1: *mut crocksdb_externalsstfileinfo_t,
        arg2: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_externalsstfileinfo_largest_key(
        arg1: *mut crocksdb_externalsstfileinfo_t,
        arg2: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_externalsstfileinfo_sequence_number(
        arg1: *mut crocksdb_externalsstfileinfo_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_externalsstfileinfo_file_size(arg1: *mut crocksdb_externalsstfileinfo_t)
        -> u64;
}
extern "C" {
    pub fn crocksdb_externalsstfileinfo_num_entries(
        arg1: *mut crocksdb_externalsstfileinfo_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_ingestexternalfileoptions_create() -> *mut crocksdb_ingestexternalfileoptions_t;
}
extern "C" {
    pub fn crocksdb_ingestexternalfileoptions_set_move_files(
        opt: *mut crocksdb_ingestexternalfileoptions_t,
        move_files: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_ingestexternalfileoptions_set_snapshot_consistency(
        opt: *mut crocksdb_ingestexternalfileoptions_t,
        snapshot_consistency: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_ingestexternalfileoptions_set_allow_global_seqno(
        opt: *mut crocksdb_ingestexternalfileoptions_t,
        allow_global_seqno: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_ingestexternalfileoptions_set_allow_blocking_flush(
        opt: *mut crocksdb_ingestexternalfileoptions_t,
        allow_blocking_flush: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_ingestexternalfileoptions_destroy(
        opt: *mut crocksdb_ingestexternalfileoptions_t,
    );
}
extern "C" {
    pub fn crocksdb_ingest_external_file(
        db: *mut crocksdb_t,
        file_list: *const *const libc::c_char,
        list_len: usize,
        opt: *const crocksdb_ingestexternalfileoptions_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_ingest_external_file_cf(
        db: *mut crocksdb_t,
        handle: *mut crocksdb_column_family_handle_t,
        file_list: *const *const libc::c_char,
        list_len: usize,
        opt: *const crocksdb_ingestexternalfileoptions_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_ingest_external_file_optimized(
        db: *mut crocksdb_t,
        handle: *mut crocksdb_column_family_handle_t,
        file_list: *const *const libc::c_char,
        list_len: usize,
        opt: *const crocksdb_ingestexternalfileoptions_t,
        errptr: *mut *mut libc::c_char,
    ) -> libc::c_uchar;
}
